--- a/config/RPi4B.config
+++ b/config/RPi4B.config
@@ -4,12 +4,13 @@ CONFIG_TARGET_bcm27xx_bcm2711_DEVICE_rpi-4=y
 CONFIG_NODEJS_14=y
 CONFIG_NODEJS_ICU_NONE=y
 CONFIG_PACKAGE_6in4=y
-CONFIG_PACKAGE_adbyby=y
+CONFIG_PACKAGE_adbyby=m
 CONFIG_PACKAGE_boost=y
 CONFIG_PACKAGE_boost-date_time=y
 CONFIG_PACKAGE_boost-program_options=y
 CONFIG_PACKAGE_boost-system=y
 CONFIG_PACKAGE_ca-certificates=y
+CONFIG_PACKAGE_frps=m
 CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_ipt2socks=y
 CONFIG_PACKAGE_ipv6helper=y
@@ -17,36 +18,49 @@ CONFIG_PACKAGE_kmod-ipt-nat6=y
 CONFIG_PACKAGE_kmod-iptunnel4=y
 CONFIG_PACKAGE_kmod-nf-nat6=y
 CONFIG_PACKAGE_kmod-sit=y
-CONFIG_PACKAGE_kmod-tun=y
-CONFIG_PACKAGE_libatomic=y
-CONFIG_PACKAGE_libminiupnpc=y
-CONFIG_PACKAGE_libnatpmp=y
-CONFIG_PACKAGE_libnghttp2=y
+CONFIG_PACKAGE_libatomic=m
+CONFIG_PACKAGE_libcap=m
+CONFIG_PACKAGE_libcares=y
+CONFIG_PACKAGE_libmbedtls=y
+CONFIG_PACKAGE_libnghttp2=m
 CONFIG_PACKAGE_libstdcpp=y
 CONFIG_PACKAGE_libuv=y
-CONFIG_PACKAGE_luci-app-adbyby-plus=y
-CONFIG_PACKAGE_luci-app-jd-dailybonus=y
+CONFIG_PACKAGE_libwebsockets-full=m
+CONFIG_PACKAGE_luci-app-adbyby-plus=m
+CONFIG_PACKAGE_luci-app-frps=m
+CONFIG_PACKAGE_luci-app-jd-dailybonus=m
 CONFIG_PACKAGE_luci-app-netdata=y
+CONFIG_PACKAGE_luci-app-openvpn=m
+CONFIG_PACKAGE_luci-app-qbittorrent=m
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Client=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Server=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_Obfs=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_Plugin=y
-CONFIG_PACKAGE_luci-app-zerotier=y
-CONFIG_PACKAGE_luci-i18n-adbyby-plus-zh-cn=y
+CONFIG_PACKAGE_luci-app-ttyd=m
+CONFIG_PACKAGE_luci-i18n-adbyby-plus-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-frps-zh-cn=m
 CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-openvpn-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-qbittorrent-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=m
 CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-material=y
 CONFIG_PACKAGE_netdata=y
-CONFIG_PACKAGE_node=y
+CONFIG_PACKAGE_node=m
 CONFIG_PACKAGE_odhcp6c=y
 CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
 CONFIG_PACKAGE_odhcpd-ipv6only=y
 CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
+CONFIG_PACKAGE_qBittorrent-static=m
+CONFIG_PACKAGE_shadowsocks-libev-ss-local=y
+CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
+CONFIG_PACKAGE_shadowsocks-libev-ss-server=y
 CONFIG_PACKAGE_simple-obfs-client=y
 CONFIG_PACKAGE_trojan=y
+CONFIG_PACKAGE_ttyd=m
 CONFIG_PACKAGE_v2ray-plugin=y
-CONFIG_PACKAGE_zerotier=y
 CONFIG_boost-compile-visibility-hidden=y
 CONFIG_boost-runtime-shared=y
 CONFIG_boost-static-and-shared-libs=y
