--- a/config/mf269.config
+++ b/config/mf269.config
@@ -1,5 +1,7 @@
 CONFIG_TARGET_ipq807x=y
 CONFIG_TARGET_ipq807x_generic=y
 CONFIG_TARGET_ipq807x_generic_DEVICE_zte_mf269=y
-CONFIG_PACKAGE_luci-theme-argon=y
+# CONFIG_PACKAGE_kmod-shortcut-fe is not set
+# CONFIG_PACKAGE_kmod-shortcut-fe-drv is not set
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE_DRV is not set
 CONFIG_PACKAGE_luci-theme-netgear=y
